// Vitest Snapshot v1

exports[`movement and deletion (dd) > should delete first line 1`] = `
"
I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`movement and deletion (dd) > should delete last line 1`] = `
"Dear John,

I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

"
`;

exports[`movement and deletion (dd) > should delete second line 1`] = `
"Dear John,
I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`movement and deletion (s) > should delete first character of first line 1`] = `
"ear John,

I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`movement and deletion (s) > should not delete a empty line 1`] = `
"Dear John,
 
I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`movement and deletion (x) > should delete first character of first line 1`] = `
"ear John,

I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`movement and deletion (x) > should delete second character 1`] = `
"Dar John,

I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`movement and deletion (x) > should not delete a empty line 1`] = `
"Dear John,
 
I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;
